--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: csharp
 solution: WirenutCompiler.sln
 sudo: required
+dist: trusty
+mono: none
+dotnet: 1.0.0-preview2-003121
 script:
   - xbuild /p:VbcToolExe=vbnc.exe WirenutCompiler.sln
